--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -7,40 +7,40 @@
     android:background="@drawable/blackboard"
     android:padding="@dimen/activity_vertical_margin"
     tools:context="com.welovekids.mathforkids.GameOverActivity">
-    <TextView android:id="@+id/totalCorrect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="#fff"
-        android:textSize="50sp"
-        android:paddingBottom="10dp"
-        android:text="Results"/>
-    <TextView android:id="@+id/roundCorrect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingBottom="10dp"
-        android:textColor="#fff"
-        android:text="Total Correct: "/>
-    <TextView android:id="@+id/roundIncorrect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingBottom="10dp"
-        android:textColor="#fff"
-        android:text="Total Incorrect: "/>
-    <TextView android:id="@+id/roundAnswered"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingBottom="10dp"
-        android:textColor="#fff"
-        android:text="Total Questions Answered: "/>
-    <!--<TextView android:id="@+id/roundScore"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:paddingBottom="10dp"-->
-        <!--android:textColor="#fff"-->
-        <!--android:text="HighScore: "/>-->
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="1mm">
+        <TextView android:id="@+id/totalCorrect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#fff"
+            android:textSize="50sp"
+            android:paddingBottom="10dp"
+            android:text="Results"/>
+        <TextView android:id="@+id/roundCorrect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingBottom="10dp"
+            android:textColor="#fff"
+            android:text="Total Correct: " />
+        <TextView android:id="@+id/roundIncorrect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingBottom="10dp"
+            android:textColor="#fff"
+            android:text="Total Incorrect: " />
+        <TextView android:id="@+id/roundAnswered"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingBottom="10dp"
+            android:textColor="#fff"
+            android:text="Total Questions Answered: " />
+    </LinearLayout>
 </LinearLayout>
