--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,5 +1,7 @@
+<!--May want to use coordinator layout for error message-->
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/settingsLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
@@ -9,7 +11,6 @@
     android:rowCount="4"
     android:columnCount="1"
     android:padding="5dp">
-
     <Switch
         android:id="@+id/basic"
         android:layout_width="match_parent"
