--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -8,11 +8,6 @@
     android:padding="@dimen/activity_vertical_margin"
     tools:context="com.welovekids.mathforkids.GameOverActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="1mm">
         <TextView android:id="@+id/totalCorrect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,5 +37,12 @@
             android:paddingBottom="10dp"
             android:textColor="#fff"
             android:text="Total Questions Answered: " />
-    </LinearLayout>
+        <TextView
+            android:id="@+id/newHighscore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingBottom="10dp"
+            android:textColor="#fff"
+            android:text=""/>
 </LinearLayout>
