--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -4,16 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="2dp"
+    android:layout_gravity="center"
     android:background="@drawable/blackboard"
     android:padding="@dimen/activity_vertical_margin"
     tools:context="com.welovekids.mathforkids.Score">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="1mm"
-        android:layout_gravity="center">
         <TextView android:id="@+id/totalCorrect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,5 +24,4 @@
             android:paddingBottom="10sp"
             android:textColor="#fff"
             android:text="HighScore: "/>
-    </LinearLayout>
 </LinearLayout>
