--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
     android:rowCount="7"
     android:columnCount="4"
     android:paddingBottom="@dimen/activity_vertical_margin"
-
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.welovekids.mathforkids.MainActivity">
     <!--<TextView android:id="@+id/start"-->
@@ -29,17 +28,14 @@
         android:id="@+id/start"
         android:layout_row="0"
         android:layout_column="0"
-        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_start"
-        android:onClick="startMaths"
         />
     <Button
         android:id="@+id/score"
         android:layout_row="1"
         android:layout_column="0"
-        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_score"
@@ -50,7 +46,6 @@
         android:layout_column="0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="@string/button_ach"
         />
     <Button
@@ -59,24 +54,23 @@
         android:layout_column="0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="@string/button_settings"
         />
 
 
 
 
-    <ImageView
+    <!--<ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:layout_row="6"
-        android:layout_column="2" />
+        android:layout_column="2" />-->
 
-    <MediaController
+   <!-- <MediaController
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/mediaController3"
         android:layout_row="5"
-        android:layout_column="3" />
+        android:layout_column="3" />-->
 </GridLayout>
