--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,5 +1,5 @@
 <!--May want to use coordinator layout for error message-->
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/settingsLayout"
     android:layout_width="match_parent"
@@ -8,53 +8,31 @@
     android:paddingRight="16dp"
     android:orientation="vertical"
     tools:context=".SettingsActivity"
-    android:rowCount="4"
-    android:columnCount="1"
     android:padding="5dp">
+
     <Switch
         android:id="@+id/basic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_row="0"
-        android:layout_column="0"
-        android:layout_weight="1"
-        android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
         android:text="Basic" />
     <Switch
         android:id="@+id/intermediate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_row="1"
-        android:layout_column="0"
-        android:layout_weight="1"
-        android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
         android:text="Intermediate"/>
     <Switch
         android:id="@+id/advanced"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_row="2"
-        android:layout_column="0"
-        android:layout_weight="1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
         android:text="Advanced"/>
     <Switch
         android:id="@+id/mute"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_row="3"
-        android:layout_column="0"
-        android:layout_weight="1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
         android:text="Mute"/>
 
-
-</GridLayout>
+</LinearLayout>
